styles for scrollbar and fixed goToSection function at home page

--- a/src/components/Layout/layoutStyles.scss
+++ b/src/components/Layout/layoutStyles.scss
@@ -1,3 +1,2 @@
 .layout__container{
-    min-width: 100vw;
 }
