--- a/src/globalStyles.scss
+++ b/src/globalStyles.scss
@@ -48,9 +48,7 @@ html,body{
 	box-sizing: border-box;
 }
 
-::-webkit-scrollbar {
-    display: none;
-}
+
 
 .layout__container{
 	&.dark{
@@ -59,6 +57,15 @@ html,body{
 	&.light{
 		background: #FFF;
 	}
+}
+::-webkit-scrollbar {
+	width: 5px;
+	height: 5px;
+	background-color:#0a1c26d6;
+}
+::-webkit-scrollbar-thumb{
+	background-color: rgba(104, 103, 103, 0.723);
+	border-radius: 10px;
 }
 
 body{
